--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="4oxwhIThS8dS3xXy0R6niIhEQKE3PRHanvZyVgMjXb4" />
-    <meta content="Nous créons pour vous des logiciels brilliants qui vous aident quotidiennement." name="description">
+    <meta content="Nous créons pour vous des logiciels brillants qui vous aident quotidiennement." name="description">
     <meta content="Montreal, Québec, Logiciel sur mesure, Développement de logiciel, Applications Web, Applications Mobiles, Applications Embarquées, Clean Code, TDD, XP, Scrum, Java, JavaScript, node.js, C#, C, Scala, Python, HTML5, CSS3, Android, Linux, Experts." name="keywords">
     <link href="main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Raleway&display=swap" rel="stylesheet">
